<resources>
    <string name="app_name">IOT_RoomTracker</string>
    <string name="login">Log In</string>
    <string name="passwordHint">Password</string>
    <string name="userIdHint">User Id</string>
    <string name="backgndImageDiscription">Background Image for Login Screen</string>
    <string name="userId">User ID</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
