<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="attendancetracker.ase.com.iot_roomtracker.MainActivity">

    <ImageView
        android:id="@+id/backImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_img"
        android:contentDescription="@string/backgndImageDiscription"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:scaleType="fitCenter"
        android:src="@drawable/stat_screen_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="350dp"
        >

        <EditText
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_white"
            android:drawableLeft="@drawable/ic_user_icon"
            android:drawablePadding="5dp"
            android:hint="@string/userIdHint"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/userId"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_white"
            android:drawableLeft="@drawable/ic_pass_icon"
            android:drawablePadding="5dp"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"

            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/invalidLogin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>
